--- a/style.css
+++ b/style.css
@@ -220,6 +220,7 @@ nav {
     flex-direction: column;
     align-items: center;
     gap: 40px;
+    margin-bottom: 40px;
 }
 
 .experience__section__title {
