agregué org con react

--- a/style.css
+++ b/style.css
@@ -217,10 +217,11 @@ nav {
 
 .experience {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     gap: 40px;
     margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 .experience__section__title {
